Fix logo size on mobile

--- a/_src/css/_header.scss
+++ b/_src/css/_header.scss
@@ -27,8 +27,11 @@
 
   &__logo {
     margin: 10px 0 10px 20px;
-    max-width: 150px;
     transition: opacity .25s linear;
+    
+    @media screen and (min-width: $mobile) {
+      max-width: 150px;
+    }
   }
 
   &__logo:hover {
